<resources>
    <string name="app_name">云教育</string>
    <string name="classroom_assessment">课堂评价</string>
    <string name="class_room">课堂名称</string>
    <string name="user_name">昵称</string>
    <string name="class_type">课堂类型</string>
    <string name="class_role">角色</string>
    <string name="join_classroom">进入课堂</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="class_name_cannot_be_empty">请输入课堂名称</string>
    <string name="username_cannot_be_empty">请输入昵称</string>
    <string name="class_type_cannot_be_empty">请选择课堂类型</string>
    <string name="raise_your_hand">举手</string>
    <string name="cancle_raise_your_hand">取消举手</string>
    <string name="open_the_console">控制台</string>
    <string name="close_the_console">关闭</string>
    <string name="large_class">大班课</string>
    <string name="default_public_message">欢迎使用云教育大班课</string>
    <string name="hint_im_message">请输入文字...</string>
    <string name="hint_muting">禁言中</string>
    <string name="loading_progress">加载中...</string>
    <string name="be_being_start_interact">连麦中...</string>
    <string name="education_scene_solution">云教育场景解决方案</string>
    <string name="classroom_role">学生</string>
    <string name="role_me">我：</string>
    <string name="role_student">学生：</string>
    <string name="role_teacher">老师：</string>
    <string name="the_current_version">当前版本:V1.0.0</string>
    <string name="please_enter_feedback">请输入反馈内容</string>
    <string name="please_your_phone_or_email_address">请输入您的手机号或电子邮箱(选填)</string>
    <string name="submit_evaluation">提交评价</string>
    <string name="the_input_field_cannot_be_classroom">课堂ID不要以0开头</string>
    <string name="the_input_field_cannot_be_nicename">昵称不要以0开头</string>
    <string name="please_enter_class_id">请输入课堂名称</string>
    <string name="please_enter_a_number">请输入4—8位数字</string>
    <string name="network_error">网络异常</string>
    <string name="network_error_token">网络异常 token请求失败</string>
    <string name="please_describe_your_issue">请输入反馈内容（不可留空）</string>
    <string name="thanks_for_your_feedback">提交成功</string>
    <string name="submission_failed">提交失败</string>
    <string name="get_roomtoken_faild">获取白板roomtoken失败</string>
    <string name="joinroom_fail">进入房间失败</string>
    <string name="connect_the_wheat_with_the_teacher">	老师已同意与你连麦</string>
    <string name="just_see_the_teacher">只看老师发言</string>
    <string name="just_see_all">看全员发言</string>
    <string name="hand_is_up">举手中，等待老师连麦</string>
    <string name="hand_is_down">已取消举手</string>
    <string name="left_to_timeout">断线超时离开房间</string>
    <string-array name="class_type">
        <item name="large_class">大班课</item>
        <item name="large_cdn_class">公开课</item>
    </string-array>
</resources>
