<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sy.scclassroom.ui.activity.FeedBackActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/assessment_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@mipmap/assessment_back"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/gray_333333"
            android:textSize="@dimen/sp_16"
            android:text="@string/classroom_assessment"
            android:layout_gravity="center"
            >
        </TextView>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/tv_feedback_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_36"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@+id/assessment_toolbar"
        android:background="@drawable/assessment_tv_background"
        android:text="@string/the_current_version"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:textSize="@dimen/sp_13"
        android:textColor="@color/green_48827A"
        />
    <EditText
        android:id="@+id/et_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_260"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:textColor="@color/gray_333333"
        android:hint="@string/please_describe_your_issue"
        android:padding="10dp"
        android:textSize="@dimen/sp_15"
        android:background="@drawable/feedback_edit_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_feedback_version"
        />
    <EditText
        android:id="@+id/et_feedback_phone_or_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@+id/et_feedback_content"
        android:background="@drawable/feedback_edit_content"
        android:hint="@string/please_your_phone_or_email_address"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_10"
        android:textSize="@dimen/dp_15"
        />
    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/submit_evaluation"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/gray_FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/et_feedback_phone_or_address"
        android:background="@drawable/login_btn_joinclass_selector"
        />
</androidx.constraintlayout.widget.ConstraintLayout>


