<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_classroom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/home_background"
    tools:context="sy.scclassroom.ui.activity.LoginActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_class_room_logo"
        android:layout_width="@dimen/dp_145"
        android:layout_height="@dimen/dp_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@mipmap/classroom_login_logo"
        android:layout_marginTop="@dimen/dp_11"
        android:layout_marginLeft="@dimen/dp_15"
        >
    </androidx.appcompat.widget.AppCompatImageView>
    <TextView
        android:id="@+id/tv_classroom_assessment"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_26"
        android:background="@drawable/btn_login_background"
        android:text="@string/classroom_assessment"
        android:textColor="@color/gray_FFFFFF"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_7"
        android:paddingRight="@dimen/dp_7"
        android:drawablePadding="@dimen/dp_4"
        android:drawableLeft="@mipmap/ico_feedback"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/text_multilingual"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_15"
        >
    </TextView>

    <TextView
        android:id="@+id/text_multilingual"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_26"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/gray_FFFFFF"
        android:text="@string/english"
        android:background="@drawable/btn_login_background"
        android:gravity="center"
        android:paddingLeft="@dimen/dp_7"
        android:paddingRight="@dimen/dp_7"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_15"
        ></TextView>

    <TextView
        android:id="@+id/tv_solution"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_28"
        app:layout_constraintTop_toBottomOf="@+id/iv_class_room_logo"
        android:textSize="@dimen/sp_15"
        android:text="@string/education_scene_solution"
        android:textColor="@color/gray_FFFFFF"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        ></TextView>
    <TextView
        android:id="@+id/tv_classroom_version"
        android:layout_width="@dimen/dp_35"
        android:layout_height="@dimen/dp_13"
        android:textSize="@dimen/sp_11"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_2"
        android:textColor="@color/gray_FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/tv_solution" />
    <TextView
        android:id="@+id/tv_scclassroom_data"
        android:layout_width="@dimen/dp_183"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#b3ffffff"
        android:textSize="10sp"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_classroom_version"
        android:layout_marginLeft="@dimen/dp_15"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_multilingual"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@mipmap/home_person"

        >

    </androidx.appcompat.widget.AppCompatImageView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/login_input_background"
        app:layout_constraintTop_toBottomOf="@+id/tv_scclassroom_data"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_71"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:scrollbars="none"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contraint_layout_classroom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/tv_class_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_23"
                android:text="@string/class_room"
                android:textColor="@color/gray_333333"
                android:layout_marginTop="@dimen/dp_20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
            </TextView>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_class_room"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:digits="1234567890"
                android:maxLength="8"
                android:singleLine="true"
                android:windowSoftInputMode="adjustPan|stateVisible"
                android:importantForAutofill="no"
                android:inputType="phone|number"
                android:paddingLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_10"
                android:textSize="@dimen/sp_15"
                android:hint="@string/please_enter_a_number"
                android:textColorHint="@color/gray_E6E6E6"
                android:textColor="@color/gray_666666"
                android:background="@drawable/bg_class_room_edit"
                app:layout_constraintTop_toBottomOf="@+id/tv_class_room"
                android:layout_marginLeft="@dimen/dp_23"
                android:layout_marginRight="@dimen/dp_22"
                ></androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_classroom_clear"
                android:layout_width="@dimen/dp_12"
                android:layout_height="@dimen/dp_12"
                android:src="@mipmap/clear_content"
                android:layout_alignRight="@+id/et_class_room"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:layout_marginRight="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="@+id/et_class_room"
                app:layout_constraintTop_toTopOf="@+id/et_class_room"
                app:layout_constraintBottom_toBottomOf="@+id/et_class_room"
                >
            </androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray_333333"
                android:text="@string/user_name"
                android:layout_marginLeft="@dimen/dp_23"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_class_room"
                android:layout_marginTop="@dimen/dp_10"
                >
            </TextView>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:digits="1234567890"
                android:maxLength="8"
                android:singleLine="true"
                android:windowSoftInputMode="adjustPan|stateVisible"
                android:importantForAutofill="no"
                android:inputType="phone|number"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_12"
                android:textSize="@dimen/sp_15"
                android:textColorHint="@color/gray_E6E6E6"
                android:textColor="@color/gray_666666"
                android:hint="@string/please_enter_a_number"
                android:background="@drawable/bg_class_room_edit"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                android:layout_marginLeft="@dimen/dp_23"
                android:layout_marginRight="@dimen/dp_22"
                ></androidx.appcompat.widget.AppCompatEditText>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_username_clear"
                android:layout_width="@dimen/dp_12"
                android:layout_height="@dimen/dp_12"
                android:src="@mipmap/clear_content"
                android:layout_alignRight="@+id/et_class_room"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_marginRight="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="@+id/et_user_name"
                app:layout_constraintTop_toTopOf="@+id/et_user_name"
                app:layout_constraintBottom_toBottomOf="@+id/et_user_name"
                >
            </androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:id="@+id/tv_class_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_type"
                android:layout_marginTop="@dimen/dp_15"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray_333333"
                android:layout_marginLeft="@dimen/dp_23"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_user_name"
                >
            </TextView>
            <TextView
                android:id="@+id/tv_classtype"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/bg_login_tv_background"
                app:layout_constraintTop_toBottomOf="@+id/tv_class_type"
                android:layout_marginLeft="@dimen/dp_23"
                android:layout_marginRight="@dimen/dp_22"
                android:text="@string/large_class"
                android:textColor="@color/green_54BEAA"
                android:textSize="@dimen/sp_15"
                android:gravity="center"
                ></TextView>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:src="@mipmap/ico_enter_into"
                android:layout_alignRight="@+id/et_class_room"
                android:layout_centerVertical="true"
                android:visibility="visible"
                android:layout_marginRight="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="@+id/tv_classtype"
                app:layout_constraintTop_toTopOf="@+id/tv_classtype"
                app:layout_constraintBottom_toBottomOf="@+id/tv_classtype"
                >
            </androidx.appcompat.widget.AppCompatImageView>
            <TextView
                android:id="@+id/tv_class_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_23"
                android:text="@string/class_role"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/gray_333333"
                android:layout_marginTop="@dimen/dp_15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_classtype"
                >
            </TextView>
            <TextView
                android:id="@+id/tv_classrole"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/bg_login_tv_background"
                app:layout_constraintTop_toBottomOf="@+id/tv_class_role"
                android:layout_marginLeft="@dimen/dp_23"
                android:layout_marginRight="@dimen/dp_22"
                android:text="@string/classroom_role"
                android:textColor="@color/green_54BEAA"
                android:textSize="@dimen/sp_15"
                android:gravity="center"
                ></TextView>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:src="@mipmap/ico_enter_into"
                android:layout_alignRight="@+id/et_class_room"
                android:layout_centerVertical="true"
                android:visibility="visible"
                android:layout_marginRight="@dimen/dp_12"
                app:layout_constraintEnd_toEndOf="@+id/tv_classrole"
                app:layout_constraintTop_toTopOf="@+id/tv_classrole"
                app:layout_constraintBottom_toBottomOf="@+id/tv_classrole"
                >
            </androidx.appcompat.widget.AppCompatImageView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_join_classroom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_23"
                android:layout_marginRight="@dimen/dp_22"
                android:text="@string/join_classroom"
                android:textColor="@color/gray_FFFFFF"
                android:textSize="@dimen/sp_15"
                android:background="@drawable/login_btn_joinclass_selector"
                app:layout_constraintTop_toBottomOf="@+id/tv_classrole"
                ></androidx.appcompat.widget.AppCompatButton>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/iv_login_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/dp_20"
        android:textSize="@dimen/sp_12"
        android:textColor="#BBBBBB"
        ></TextView>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_31"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@mipmap/home_bottom"
        ></androidx.appcompat.widget.AppCompatImageView>
</androidx.constraintlayout.widget.ConstraintLayout>